--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jade": "~1.11.0",
         "morgan": "~1.9.0",
         "mysql2": "^1.5.1",
+        "nodemailer": "^6.3.0",
         "parse-error": "^0.2.0",
         "passport": "^0.4.0",
         "passport-jwt": "^3.0.0",
