--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "@sendgrid/mail": "^6.4.0",
         "await-to-js": "^2.0.1",
         "bcrypt": "^3.0.6",
         "bcrypt-promise": "^2.0.0",
