--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
         "cors": "^2.8.4",
         "debug": "~2.6.9",
         "dotenv": "^4.0.0",
-        "express": "~4.15.5",
+        "express": "^4.17.1",
         "jade": "~1.11.0",
+        "moment": "^2.24.0",
         "morgan": "~1.9.0",
         "mysql2": "^1.7.0",
         "nodemailer": "^6.3.0",
         "parse-error": "^0.2.0",
         "passport": "^0.4.0",
         "passport-jwt": "^3.0.0",
+        "request": "^2.88.0",
         "sequelize": "^4.44.3",
         "sequelize-cli": "^3.0.0",
         "serve-favicon": "~2.4.5",
+        "stripe": "^7.10.0",
         "validator": "^9.2.0"
     },
     "author": "Lorenzo Fiorio",
