--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jade": "~1.11.0",
         "moment": "^2.24.0",
         "morgan": "~1.9.0",
+        "multer": "^1.4.2",
         "mysql2": "^1.7.0",
         "nodemailer": "^6.3.0",
         "parse-error": "^0.2.0",
