--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dependencies": {
         "@sendgrid/mail": "^6.4.0",
         "await-to-js": "^2.0.1",
-        "bcrypt": "^3.0.6",
+        "bcrypt": "3.0.6",
         "bcrypt-promise": "^2.0.0",
         "body-parser": "~1.18.2",
         "cookie-parser": "~1.4.3",
